Cloud-1837 correct openapi response body types to use dtos
